# ChmlFrp-flutter

./: .gitignore  README.md  convert_png_to_ico.ps1  create_compatible_flutter_icon.ps1  create_flutter_icon.cs  create_flutter_icon.ps1  create_simple_icon.ps1  frpc.ini  pubspec.yaml  setup.iss
lib/: main.dart
lib/models/: models.dart
lib/pages/: dashboard_page.dart  login_page.dart  logs_page.dart  main_page.dart  node_list_page.dart  settings_page.dart  tunnel_list_page.dart
lib/res/: assets_res.dart  default_res.dart  font_res.dart
lib/services/: api_service.dart  frpc_service.dart
lib/theme/: app_theme.dart
lib/utils/: animation_utils.dart
lib/widgets/: about_dialog.dart  cherry_blossom_particle.dart  tunnel_form_dialog.dart  uptime_chart.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/frpc_integration/: CMakeLists.txt  config_generator.cpp  process_manager.cpp
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  win32_window.cpp
